deployment/gke-dev-env/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: auth
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: gcr.io/fitcentive-dev/auth:1.0
          resources:
            requests:
              memory: 300Mi
              cpu: "0.3"
            limits:
              memory: 500Mi
              cpu: "0.5"
          ports:
            - name: http-port
              containerPort: 9000
          readinessProbe:
            httpGet:
              path: /api/auth/health
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /api/auth/health
              port: 9000
            initialDelaySeconds: 120
            periodSeconds: 15
