deployment/gke-dev-env/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: auth
spec:
  selector:
    app: auth-service
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 9000
