deployment/gke-dev-env/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: auth
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api.fitcentive.xyz
      secretName: auth-tls-certificate
  rules:
    - host: api.fitcentive.xyz
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 9000
          - path: /api/internal/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 9000
